Gap issue solved

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1286,7 +1286,7 @@
     .footer-list01 {
       width: 100%;
       height: auto;
-      margin-top: -60px;
+      margin-top: -40px;
     }
     .footer-list02 {
       width: 100%;
